[metadata]
name = onion
version = 0.0.1
description = tor tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/KeisukeToyota/onion
author = KeisukeToyota
author_email = hm.pudding0715@gmail.com
maintainer = KeisukeToyota
maintainer_email = hm.pudding0715@gmail.com

[options]
packages = find:
